# game_engine

./: .gitmodules  CMakeLists.txt  EditorMainLoop.cpp  README.md  loadScene.cpp  main.cpp
InputManagment/: Input.cpp  Input.h  InputGetters.cpp
Rendering/: BufferGPU.cpp  BufferGPU.h  Camera.cpp  Camera.h  CmdBuffer.cpp  CmdBuffer.h  ImageGPU.cpp  ImageGPU.h  Material.cpp  Material.h  MeshGeometry.cpp  MeshGeometry.h  Renderer.cpp  Renderer.h  RendererInit.cpp  ShaderObj.cpp  ShaderObj.h  Vertex.cpp  Vertex.h
ecs_components/: Mesh.cpp  Mesh.h  PointLight.cpp  PointLight.h  Transform.cpp  Transform.h
shaders/: compileShaders.sh  lightCulling.slang  lightCulling.spv  renderingShaders.slang  shader.spv
util/: logging.h
